app-loader.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: apploader
  name: apploader
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apploader
  template:
    metadata:
      labels:
        app: apploader
    spec:
#      nodeSelector:
#        alpha.eksctl.io/nodegroup-name: rapid-scale-us-west-2-ng
      serviceAccountName: appsimulator
      containers:
      - env:
        - name: SLEEP_BETWEEN_CYCLE
          value: "10"
        - name: APP_URL
          value: "http://${APP_URL}/logistics"
        - name: DEPLOY_NAME
          value: "appsimulator"
        image: ${AWS_ACCOUNT_ID}.dkr.ecr.${AWS_REGION}.amazonaws.com/loader:py39${INSTANCE_ARCH}64
        name: apploader
        command: ["/app-loader.sh"]
        resources:
          requests:
            cpu: 128m
            memory: 128Mi
