appsimulator.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: appsimulator
  name: appsimulator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: appsimulator
  template:
    metadata:
      labels:
        app: appsimulator
    spec:
      nodeSelector:
        alpha.eksctl.io/nodegroup-name: lb-health-arm-ng-1
      serviceAccountName: appsimulator
      containers:
      - env:
        - name: MIN_SLEEP_BETWEEN_CYCLE
          value: "10"
        - name: MAX_SLEEP_BETWEEN_CYCLE
          value: "12"
        - name: QUEUE_URL
          value: "https://sqs.${AWS_REGION}.amazonaws.com/${AWS_ACCOUNT_ID}/vertscaler-state"
        - name: APP_QUEUE_URL
          value: "https://sqs.${AWS_REGION}.amazonaws.com/${AWS_ACCOUNT_ID}/db"
        - name: DEPLOY_NAME
          value: "appsimulator"
        image: ${AWS_ACCOUNT_ID}.dkr.ecr.${AWS_REGION}.amazonaws.com/loader:py39${INSTANCE_ARCH}64
        imagePullPolicy: Always
        name: appsimulator
        command: ["/appsimulator.sh"]
        resources:
          requests:
            cpu: 128m
            memory: 128Mi
