django-ingres.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-ingres
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /logistics/health
    alb.ingress.kubernetes.io/success-codes: '200-301'
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    #alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
    #alb.ingress.kubernetes.io/backend-protocol: HTTPS
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '3' 
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/load-balancer-name: django-app
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-west-2:604429864555:certificate/1a7862ac-87a6-4501-9343-e9d74816a8ab
spec:
  rules:
    - http:
        paths:
          - path: /logistics
            pathType: Prefix
            backend:
              service:
                name: django-svc
                port: 
                  number: 443
